--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     width: 40vmin;
     height: 56vmin;
     object-fit: cover;
+    will-change: object-position;
     object-position: 100% center;
     user-select: none;
     -moz-user-select: none; 
@@ -26,12 +27,13 @@ body{
 }
 
 #track{
-    margin-left: -20vmin; 
+    /*margin-left: -20vmin; */
     display: flex;
     gap: 3vmin;
     position: absolute;
     left:   50%;
     top:    50%;
+    will-change: transform;
     transform: translate(0%, -50%);
     user-select: none;
     -moz-user-select: none; 
