--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     -webkit-user-select: none;
     -ms-user-select: none;
     -webkit-user-drag: none; 
-    transition-property: left;
+    transition-property: all;
     transition-duration: 0.8s;
     transition-timing-function: ease-in-out;
 } 
@@ -56,31 +56,38 @@ body{
     transition-duration: 0.8s;
     transition-timing-function: ease-in-out;
 }
-
-#track:has(.image.is-active) .image:not(.image.is-active){
-    transition-property: all;
-    /*transition-delay: 1s;*/
-    transition-duration: 0.8s;
-    transition-timing-function: ease-in-out;
-    width: 0px;
-    height: 0px;
-}
-
 #track > .image.is-active {
     transition-property: all;
     transition-duration: 0.8s;
+    /*transition-delay: 0.8s;*/
     transition-timing-function: ease-in-out;
     width: 100vw;
     height: 100vh;
 }
+#track:has(.image.is-active) .image:not(.image.is-active){
+    transition-property: all;
+    transition-duration: 0.8s;
+    transition-timing-function: linear;
+    width: 0px;
+    height: 0px;
+}
 
 
+/*
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+*/
+/*
 #track:has(.image.is-active) {
     transition-property: all;
     transition-duration: 0.8s;
     transition-timing-function: ease-in-out;
-    display: flex;  
     left: 0px;
     gap: 0px;
 }
 
+*/
