--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ a{
     user-select: none;
 }
 
+#trish{
+    display: block;
+    padding: 20px;
+    color: goldenrod;
+    position: sticky;
+
+}
+
 body{
     width: 100vw;
     height: 100vh;
